changed the default email also added the ability to change the default email to all users.